# zipline-tej

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py  zipline-tej.yml  zipline-tej_linux.yml  zipline-tej_mac.yml
.github/workflows/: python-publish.yml
Python38_4_zipline-tej/: requirement.txt  set_env.bat  安裝py38.bat  安裝步驟.txt
dockerfile/: tquant_bash  tquant_jupyter
exchange_calendars/: calendar_utils.py  exchange_calendar_tejxtai.py
src/assets/: _assets.c  _assets.html  asset_db_schema.py  asset_writer.py  assets.py  continuous_futures.html  exchange_info.py  roll_finder.py  synthetic.py
src/zipline/: __init__.py  __main__.py  _protocol.c  _protocol.cp38-win_amd64.pyd  _protocol.html  _protocol.pxd  _protocol.pyx  _version.py  algorithm.py  api.py  api.pyi  country.py  currency.py  dispatch.py  errors.py  extensions.py  master.py  protocol.py  test_algorithms.py  zipline_warnings.py
src/zipline/TQresearch/: __init__.py  futures_package.py  futures_price.py  futures_smart_money_positions.py  tej_pipeline.py  utils.py
src/zipline/algo/: basic_algo.py  pipeline_algo.py  utils.py
src/zipline/assets/: __init__.py  _assets.c  _assets.cp38-win_amd64.pyd  _assets.html  asset_db_migrations.py  asset_writer.py  assets.py  continuous_futures.c  continuous_futures.cp38-win_amd64.pyd  continuous_futures.html  continuous_futures.pyx  futures.py
src/zipline/data/: __init__.py  _adjustments.c  _adjustments.cp38-win_amd64.pyd  _adjustments.html  _adjustments.pyx  _equities.c  _equities.cp38-win_amd64.pyd  _equities.html  _equities.pyx  _minute_bar_internal.c  _minute_bar_internal.cp38-win_amd64.pyd  _minute_bar_internal.html  _minute_bar_internal.pyx  _resample.c  _resample.cp311-win_amd64.pyd  _resample.cp38-win_amd64.pyd  _resample.html  adjustments.py  bar_reader.py  bcolz_daily_bars.py  benchmarks.py  continuous_future_reader.py  data_portal.py  dispatch_bar_reader.py  hdf5_daily_bars.py  history_loader.py  in_memory_daily_bars.py  loader.py  minute_bars.py  resample.py  run_ingest.py  session_bars.py  treasury.py
src/zipline/data/bundles/: __init__.py  core.py  csvdir.py  fundamentals.py  morning_txf.py  quandl.py  tquant.py  tquant_future  tquant_future.py  tquant_plus
src/zipline/data/fx/: __init__.py  base.py  exploding.py  hdf5.py  in_memory.py  utils.py
src/zipline/examples/: __init__.py  buy_and_hold.py  buy_txf_example.py  buyapple.py  buyapple_ide.py  dual_ema_talib.py  dual_moving_average.py  momentum_pipeline.py  olmar.py
src/zipline/finance/: __init__.py  _finance_ext.c  _finance_ext.cp311-win_amd64.pyd  _finance_ext.cp38-win_amd64.pyd  _finance_ext.html  _finance_ext.pyx  asset_restrictions.py  cancel_policy.py  commission.py  constants.py  controls.py  execution.py  ledger.py  order.py  position.py  shared.py  slippage.py  trading.py  trading_policy.py  transaction.py
src/zipline/finance/blotter/: __init__.py  blotter.py  simulation_blotter.py
src/zipline/finance/metrics/: __init__.py  core.py  metric.py  tracker.py
src/zipline/gens/: composites.py  sim_engine.c  sim_engine.cp38-win_amd64.pyd  sim_engine.html  tradesimulation.py  utils.py
src/zipline/lib/: _factorize.c  _factorize.cp311-win_amd64.pyd  _factorize.cp38-win_amd64.pyd  _factorize.html  _float64window.c  _float64window.cp311-win_amd64.pyd  _float64window.cp38-win_amd64.pyd  _float64window.html  _int64window.c  _int64window.cp38-win_amd64.pyd  _int64window.html  _labelwindow.c  _labelwindow.cp38-win_amd64.pyd  _labelwindow.html  _uint8window.c  _uint8window.cp311-win_amd64.pyd  _uint8window.cp38-win_amd64.pyd  _uint8window.html  _windowtemplate.html  adjusted_array.py  adjustment.c  adjustment.cp311-win_amd64.pyd  adjustment.cp38-win_amd64.pyd  adjustment.html  adjustment.pxd  adjustment.pyx  labelarray.py  normalize.py  quantiles.py  rank.c  rank.cp311-win_amd64.pyd  rank.cp38-win_amd64.pyd  rank.html  rank.pyx
src/zipline/pipeline/: domain.py  downsample_helpers.py  engine.py  mixins.py  pipeline.py  term.py
src/zipline/pipeline/data/: TQDataSet.json  TQFundamentals.py  __init__.py  dataset.py  equity_pricing.py  ndb_fin.py  ndb_stk.py  tejquant.py
src/zipline/pipeline/factors/: __init__.py  basic.py  events.py  (+2 more)
src/zipline/sources/: TEJ_Api_Data.py  benchmark_source.py  requests_csv.py  treasury_source.py
src/zipline/testing/: __init__.py  core.py  debug.py  fixtures.py  pipeline_terms.py  predicates.py  slippage.py
src/zipline/utils/: algo_instance.py  api_info.py  api_support.py  argcheck.py  cache.py  calendar_utils.py  classproperty.py  cli.py  compat.py  context_tricks.py  data.py  date_utils.py  deprecate.py  dummy.py  events.py  exploding_object.py  factory.py  final.py  formatting.py  functional.py  idbox.py  input_validation.py  numpy_utils.py  pandas_utils.py  preprocess.py  run_algo.py
src/zipline_tej.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
zipline_tej.egg-info/: requires.txt
(+10 files in other folders)
